<?xml version="1.0"?>
<package format="2">
    <name>motion_controller</name>
    <version>0.0.0</version>
    <description>The motion_controller package</description>

    <maintainer email="mohitd2000@gmail.com">mohit</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>geometry_msgs</depend>
</package>
